@@ -82,7 +82,9 @@ static int quake_config_is_valid (struct server *s);
 static int quake3_config_is_valid (struct server *s);
 static int config_is_valid_generic (struct server *s);
 
-static int write_quake_variables (const struct condef *con);
+static int write_q1_vars (const struct condef *con);
+static int write_qw_vars (const struct condef *con);
+static int write_q2_vars (const struct condef *con);
 
 static int q1_exec_generic (const struct condef *con, int forkit);
 static int qw_exec (const struct condef *con, int forkit);
@@ -179,13 +181,12 @@ static struct gsname2type_s gsname2type[] =
 
 void init_games()
 {
-  int i;
+  unsigned i;
 
-  debug(3,"init_games");
+  debug(3,"initializing games");
 
   for (i = 0; i < GAMES_TOTAL; i++)
   {
-    games[i].real_home = expand_tilde (games[i].default_home);
     g_datalist_init(&games[i].games_data);
   }
 
@@ -1560,24 +1561,10 @@ static int quake_config_is_valid (struct server *s) {
   char *path;
   struct game *g = &games[s->type];
 
-  switch (s->type) {
-
-  case Q1_SERVER:
-    cfgdir = "id1";
-    break;
-
-  case QW_SERVER:
-    cfgdir = "id1";
-    break;
-
-  case Q2_SERVER:
-    cfgdir = "baseq2";
-    break;
-
-  default:
+  if(g->main_mod && g->main_mod[0])
+    cfgdir = g->main_mod[0];
+  else
     return FALSE;
-
-  }
 
   if (g->cmd == NULL || g->cmd[0] == '\0') {
     // %s = game name e.g. QuakeWorld
@@ -1707,27 +1694,35 @@ static int config_is_valid_generic (struct server *s) {
   return TRUE;
 }
 
-
-static FILE *open_cfg (const char *filename, int secure) {
-  FILE *f;
-
-  f = fopen (filename, "w");
-  if (f) {
-    if (secure)
-      chmod (filename, S_IRUSR | S_IWUSR);
-
-    fprintf (f, "//\n// generated by XQF, do not modify\n//\n");
-  }
-  return f;
+static int complain_launch_cant_write_file(const char* file)
+{
+  return dialog_yesno (NULL, 1, _("Launch"), _("Cancel"), 
+	//%s frontend.cfg
+	_("Cannot write to file \"%s\".\n\nLaunch client anyway?"), file);
 }
 
+static FILE *open_cfg (const char *filename, int private) {
+  FILE *f;
+  mode_t saved_umask;
+
+  if(private)
+    saved_umask = umask(0077);
+
+  f = fopen (filename, "w");
+  if (f)
+    fprintf (f, "//\n// generated by XQF, do not modify\n//\n");
+
+  if(private)
+    umask(saved_umask);
+
+  return f;
+}
 
 static int real_password (const char *password) {
   if (!password || (password[0] == '1' && password[1] == '\0'))
     return FALSE;
   return TRUE;
 }
-
 
 static int write_passwords (const char *filename, const struct condef *con) {
   FILE *f;
@@ -1743,19 +1738,29 @@ static int write_passwords (const char *filename, const struct condef *con) {
     fprintf (f, "spectator \"%s\"\n", con->spectator_password);
 
   if (con->rcon_password)
-    fprintf (f, "rconpassword \"%s\"\n", con->rcon_password);
+    fprintf (f, "rcon_password \"%s\"\n", con->rcon_password);
 
   fclose (f);
   return TRUE;
 }
 
 
-static int write_q1_vars (const char *filename, const struct condef *con) {
+static int write_q1_vars (const struct condef *con) {
   FILE *f;
+  int ret = TRUE;
+  struct game *g = &games[con->s->type];
+  char* file = NULL;
 
-  f = open_cfg (filename, FALSE);
-  if (!f)
+  if(g->main_mod && g->main_mod[0])
+    file = g->main_mod[0];
+  else
     return FALSE;
+
+  file = g_strjoin("/", g->real_dir, file, EXEC_CFG, NULL);
+
+  f = open_cfg (file, FALSE);
+  if (!f)
+    { ret = FALSE; goto out; }
 
   if (default_q1_name)
     fprintf (f, "name \"%s\"\n", default_q1_name);
@@ -1769,17 +1774,33 @@ static int write_q1_vars (const char *filename, const struct condef *con) {
     fprintf (f, "exec \"%s\"\n", con->custom_cfg);
 
   fclose (f);
-  return TRUE;
+
+out:
+
+  if(!ret)
+    ret = complain_launch_cant_write_file(file);
+
+  g_free(file);
+  return ret;
 }
 
-
-static int write_qw_vars (const char *filename, const struct condef *con) {
+static int write_qw_vars (const struct condef *con) {
   FILE *f;
   int auto_pl;
+  int ret = TRUE;
+  struct game *g = &games[con->s->type];
+  char* file = NULL;
 
-  f = open_cfg (filename, FALSE);
-  if (!f)
+  if(g->main_mod && g->main_mod[0])
+    file = g->main_mod[0];
+  else
     return FALSE;
+
+  file = g_strjoin("/", g->real_dir, file, EXEC_CFG, NULL);
+
+  f = open_cfg (file, FALSE);
+  if (!f)
+    { ret = FALSE; goto out; }
 
   if (default_qw_name)
     fprintf (f, "name \"%s\"\n", default_qw_name);
@@ -1831,16 +1852,32 @@ static int write_qw_vars (const char *filename, const struct condef *con) {
     fprintf (f, "exec \"%s\"\n", con->custom_cfg);
 
   fclose (f);
-  return TRUE;
+
+out:
+
+  if(!ret)
+    ret = complain_launch_cant_write_file(file);
+
+  g_free(file);
+  return ret;
 }
 
-
-static int write_q2_vars (const char *filename, const struct condef *con) {
+static int write_q2_vars (const struct condef *con) {
   FILE *f;
+  int ret = TRUE;
+  struct game *g = &games[con->s->type];
+  char* file = NULL;
 
-  f = open_cfg (filename, FALSE);
-  if (!f)
+  if(g->main_mod && g->main_mod[0])
+    file = g->main_mod[0];
+  else
     return FALSE;
+
+  file = g_strjoin("/", g->real_dir, file, EXEC_CFG, NULL);
+
+  f = open_cfg (file, FALSE);
+  if (!f)
+    { ret = FALSE; goto out; }
 
   if (default_q2_name)
     fprintf (f, "set name \"%s\"\n", default_q2_name);
@@ -1860,81 +1897,15 @@ static int write_q2_vars (const char *filename, const struct condef *con) {
     fprintf (f, "exec \"%s\"\n", con->custom_cfg);
 
   fclose (f);
-  return TRUE;
+
+out:
+
+  if(!ret)
+    ret = complain_launch_cant_write_file(file);
+
+  g_free(file);
+  return ret;
 }
-
-/*
-#ifdef QSTAT23
-
-static int write_q3_vars (const char *filename, const struct condef *con) {
-  FILE *f;
-
-  f = open_cfg (filename, FALSE);
-  if (!f)
-    return FALSE;
-
-  if (default_name)
-    fprintf (f, "set name \"%s\"\n", default_name);
-
-  if (games[Q3_SERVER].game_cfg)
-    fprintf (f, "exec \"%s\"\n", games[Q3_SERVER].game_cfg);
-
-  if (con->custom_cfg)
-    fprintf (f, "exec \"%s\"\n", con->custom_cfg);
-
-  fclose (f);
-  return TRUE;
-}
-
-#endif
-*/
-
-static int write_quake_variables (const struct condef *con) {
-/*
-#ifdef QSTAT23
-  char *path;
-#endif
-*/
-  char *file = NULL;
-  int res = TRUE;
-
-  switch (con->s->type) {
-
-  case Q1_SERVER:
-    file = file_in_dir (games[Q1_SERVER].real_dir, "id1/" EXEC_CFG);
-    res =  write_q1_vars (file, con);
-    break;
-
-  case QW_SERVER:
-    file = file_in_dir (games[QW_SERVER].real_dir, "id1/" EXEC_CFG);
-    res =  write_qw_vars (file, con);
-    break;
-
-  case Q2_SERVER:
-    file = file_in_dir (games[Q2_SERVER].real_dir, "baseq2/" EXEC_CFG);
-    res = write_q2_vars (file, con);
-    break;
-
-  default:
-    return FALSE;
-
-  }
-
-  if (file) {
-    if (!res) {
-      if (!dialog_yesno (NULL, 1, _("Launch"), _("Cancel"), 
-	    //%s frontend.cfg
-             _("Cannot write to file \"%s\".\n\nLaunch client anyway?"), file)) {
-	g_free (file);
-	return FALSE;
-      }
-    }
-    g_free (file);
-  }
-
-  return TRUE;
-}
-
 
 static int is_dir (const char *dir, const char *gamedir) {
   struct stat stat_buf;
@@ -1948,7 +1919,6 @@ static int is_dir (const char *dir, const char *gamedir) {
   }
   return res;
 }
-
 
 static int q1_exec_generic (const struct condef *con, int forkit) {
   char *argv[32];
@@ -2002,33 +1972,15 @@ static int q1_exec_generic (const struct condef *con, int forkit) {
 }
 
 
-static int qw_exec (const struct condef *con, int forkit) {
-
-  // Not used for Quake2 anymore, but not changed as I can't test it
-  // right now
-
+static int qw_exec (const struct condef *con, int forkit)
+{
   char *argv[32];
   int argi = 0;
-  char *q_passwd;
   char *cmd;
-  char *file;
+  char *file = NULL;
   struct game *g = &games[con->s->type];
   int retval=-1;
-  char *to_free = NULL;
-  
-  switch (con->s->type) {
 
-  case QW_SERVER:
-    q_passwd = "id1/" PASSWORD_CFG;
-    break;
-
-  case Q2_SERVER:
-    q_passwd = "baseq2/" PASSWORD_CFG;
-    break;
-
-  default:
-    return retval;
-  }
 
   cmd = strdup_strip (g->cmd);
 
@@ -2036,90 +1988,50 @@ static int qw_exec (const struct condef *con, int forkit) {
   while ((argv[argi] = strtok (NULL, delim)) != NULL)
     argi++;
 
-  switch (con->s->type) {
+  if (default_nosound)
+    argv[argi++] = "-nosound";
 
-  case QW_SERVER:
-    if (default_nosound)
-      argv[argi++] = "-nosound";
+  if (default_nocdaudio)
+    argv[argi++] = "-nocdaudio";
 
-    if (default_nocdaudio)
-      argv[argi++] = "-nocdaudio";
-
-    if (con->gamedir) {
-      argv[argi++] = "-gamedir";
-      argv[argi++] = con->gamedir;
-    }
-
-    break;
-
-  case Q2_SERVER:
-    if (default_nosound) {
-      argv[argi++] = "+set";
-      argv[argi++] = "s_initsound";
-      argv[argi++] = "0";
-    }
-
-    argv[argi++] = "+set";
-    argv[argi++] = "cd_nocd";
-    argv[argi++] = (default_nocdaudio)? "1" : "0";
-
-    if (con->gamedir) {
-      argv[argi++] = "+set";
-      argv[argi++] = "game";
-      argv[argi++] = con->gamedir;
-    }
-
-    break;
-
-  default:
-    break;
-
+  if (con->gamedir) {
+    argv[argi++] = "-gamedir";
+    argv[argi++] = con->gamedir;
   }
 
-  if (con->password || con->rcon_password || 
-                                    real_password (con->spectator_password)) {
-    file = file_in_dir (g->real_dir, q_passwd);
+  if (con->password || con->rcon_password
+      || real_password (con->spectator_password)) {
 
-    if (!write_passwords (file, con)) {
-      //passwords file could not be written
-      if (!dialog_yesno (NULL, 1, _("Launch"), _("Cancel"), 
-             _("Cannot write to file \"%s\".\n\nLaunch client anyway?"), file)) {
-	g_free (file);
-	g_free (cmd);
-	return retval;
-      }
-    }
+    if(g->main_mod && g->main_mod[0])
+      file = g_strjoin("/", g->real_dir, g->main_mod[0], PASSWORD_CFG, NULL);
 
-    g_free (file);
+    if (file && !write_passwords (file, con)
+	&& !complain_launch_cant_write_file(file))
+      goto out;
 
     argv[argi++] = "+exec";
     argv[argi++] = PASSWORD_CFG;
   }
   else {
     if (con->spectator_password) {
-	argv[argi++] = "+spectator";
-	argv[argi++] = con->spectator_password;
+      argv[argi++] = "+spectator";
+      argv[argi++] = con->spectator_password;
     }
   }
 
-  if (con->s->type == Q2_SERVER || (con->s->type == QW_SERVER && 
-				    (!con->gamedir || 
-				     g_strcasecmp (con->gamedir, "qw") == 0 ||
-				     !is_dir (g->real_dir, con->gamedir)) ) ) {
-    argv[argi++] = "+exec";
-    argv[argi++] = EXEC_CFG;
-  }
+  argv[argi++] = "+exec";
+  argv[argi++] = EXEC_CFG;
 
   if (con->server) {
-    if (!con->demo || con->s->type == Q2_SERVER) {
-      argv[argi++] = "+connect";
-      argv[argi++] = con->server;
-    }
     if (con->demo) {
       argv[argi++] = "+record";
       argv[argi++] = con->demo;
       if (con->s->type == QW_SERVER)
 	argv[argi++] = con->server;
+    }
+    else {
+      argv[argi++] = "+connect";
+      argv[argi++] = con->server;
     }
   }
 
@@ -2127,23 +2039,23 @@ static int qw_exec (const struct condef *con, int forkit) {
 
   retval = client_launch_exec (forkit, g->real_dir, argv, con->s);
 
-  g_free (cmd);
-  if (to_free)
-    g_free (to_free);
+out:
+  g_free(file);
+  g_free(cmd);
+
   return retval;
 }
 
 static int q2_exec (const struct condef *con, int forkit) {
   char *argv[32];
   int argi = 0;
-  char *q_passwd;
   char *cmd;
-  char *file;
+  char *file = NULL;
   struct game *g = &games[con->s->type];
   int retval=-1;
-  char *to_free = NULL;
   
-  q_passwd = "baseq2/" PASSWORD_CFG;
+  if(g->main_mod && g->main_mod[0])
+    file = g_strjoin("/", g->real_dir, g->main_mod[0], PASSWORD_CFG, NULL);
 
   cmd = strdup_strip (g->cmd);
 
@@ -2167,21 +2079,12 @@ static int q2_exec (const struct condef *con, int forkit) {
     argv[argi++] = con->gamedir;
   }
 
-  if (con->password || con->rcon_password || 
-                                    real_password (con->spectator_password)) {
-    file = file_in_dir (g->real_dir, q_passwd);
+  if (con->password || con->rcon_password
+      || real_password (con->spectator_password)) {
 
-    if (!write_passwords (file, con)) {
-      //passwords file could not be written
-      if (!dialog_yesno (NULL, 1, _("Launch"), _("Cancel"), 
-             _("Cannot write to file \"%s\".\n\nLaunch client anyway?"), file)) {
-	g_free (file);
-	g_free (cmd);
-	return retval;
-      }
-    }
-
-    g_free (file);
+    if (file && !write_passwords (file, con)
+	&& !complain_launch_cant_write_file(file))
+      goto out;
 
     argv[argi++] = "+exec";
     argv[argi++] = PASSWORD_CFG;
@@ -2209,9 +2112,9 @@ static int q2_exec (const struct condef *con, int forkit) {
 
   retval = client_launch_exec (forkit, g->real_dir, argv, con->s);
 
+out:
+  g_free (file);
   g_free (cmd);
-  if (to_free)
-    g_free (to_free);
   return retval;
 }
 
@@ -2221,8 +2124,6 @@ static int q2_exec_generic (const struct condef *con, int forkit) {
   char *cmd;
   struct game *g = &games[con->s->type];
   int retval;
-
-  char *to_free = NULL;
 
   cmd = strdup_strip (g->cmd);
 
@@ -2262,8 +2163,6 @@ static int q2_exec_generic (const struct condef *con, int forkit) {
   retval = client_launch_exec (forkit, g->real_dir, argv, con->s);
 
   g_free (cmd);
-  if (to_free)
-    g_free (to_free);
 
   return retval;
 }
