@@ -47,7 +47,7 @@ struct game games[] = {
     parse_player        : poqs_parse_player,
     parse_server        : quake_parse_server,
     config_is_valid     : quake_config_is_valid,
-    write_config        : write_quake_variables,
+    write_config        : write_q1_vars,
     exec_client         : q1_exec_generic,
     custom_cfgs         : quake_custom_cfgs,
     save_info           : quake_save_info,
@@ -75,7 +75,7 @@ struct game games[] = {
     parse_server        : quake_parse_server,
     analyze_serverinfo  : qw_analyze_serverinfo,
     config_is_valid     : quake_config_is_valid,
-    write_config        : write_quake_variables,
+    write_config        : write_qw_vars,
     exec_client         : qw_exec,
     custom_cfgs         : quake_custom_cfgs,
     save_info           : quake_save_info,
@@ -102,7 +102,7 @@ struct game games[] = {
     parse_server        : quake_parse_server,
     analyze_serverinfo  : q2_analyze_serverinfo,
     config_is_valid     : quake_config_is_valid,
-    write_config        : write_quake_variables,
+    write_config        : write_q2_vars,
     exec_client         : q2_exec,
     custom_cfgs         : quake_custom_cfgs,
     save_info           : quake_save_info,
