@@ -1,6 +1,7 @@
 Jan 30, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - remove quakeforge specials
 - remove no longer needed ssam notes
+- fix saving of quake2 passwords (#1112381)
 
 Jan 25, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - Halflife2 support (untested)
